--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Node.js
 node_modules/
 .env
-.env.*local
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -33,4 +33,3 @@ Thumbs.db
 
 .idea/
 
-seed.js
